welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
avance()
      ^Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
if (estSurBiscuit() == false) {
^