welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
if (estSurBiscuit() == false) {
return false
avance()
}
}